Agregamos el README

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: pkgMetagenomica
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Version: 0.99.0
+Date: 2022-08-04
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Tobias", "Portillo", , "tobiasportillo@ciencias.unam.mx", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Package for metagenomics analysis.
+License: Artistic-2.0
+URL: https://github.com/tobiasportillo/pkgMetagenomica
+BugReports: https://support.bioconductor.org/t/pkgMetagenomica
+biocViews: Software
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
-URL: https://github.com/tobiasportillo/pkgMetagenomica
-BugReports: https://github.com/tobiasportillo/pkgMetagenomica/issues
